--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-PT">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,122 +11,173 @@
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
-        body { background: #020617; color: white; font-family: sans-serif; overflow: hidden; }
-        .glass { background: rgba(15, 23, 42, 0.9); backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.05); }
-        .neon-glow { box-shadow: 0 0 20px rgba(56, 189, 248, 0.15); border: 1px solid rgba(56, 189, 248, 0.4); }
-        iframe { background: white; width: 100%; height: 100%; border: none; border-radius: 2.5rem; }
-        textarea { scrollbar-width: none; }
+        body { background: #020617; color: white; font-family: 'Inter', sans-serif; }
+        .glass { background: rgba(15, 23, 42, 0.9); backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.1); }
+        .neon-border { border: 2px solid #38bdf8; box-shadow: 0 0 20px rgba(56, 189, 248, 0.2); }
+        .id-permanente { background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%); border: 2px solid #38bdf8; }
+        .btn-entrar { background: #38bdf8; color: #020617; font-weight: 900; transition: all 0.2s; }
+        .btn-entrar:hover { background: #7dd3fc; transform: scale(1.05); }
+        iframe { background: white; width: 100%; height: 100%; border: none; border-radius: 2rem; min-height: 450px; }
     </style>
 </head>
-<body>
+<body class="p-4 md:p-8">
     <div id="root"></div>
 
     <script type="text/babel">
         const { useState, useEffect, useRef } = React;
 
-        // ESTE É O ID QUE JÁ VEM COLADO PARA TODO MUNDO
-        const PUBLIC_ROOM_ID = "HUB_HTML_SALA_PUBLICA_2025";
+        const SALA_PADRAO = "SALA_PUBLICA_2025";
 
         const App = () => {
-            const [myId, setMyId] = useState('');
-            const [targetId, setTargetId] = useState(PUBLIC_ROOM_ID); // Já inicia com o ID Público
-            const [mode, setMode] = useState('LOCAL'); 
-            const [role, setRole] = useState('WASH'); 
-            const [code, setCode] = useState("<h1>HUB HTML ONLINE</h1>\n<p>Conecte-se para compartilhar!</p>");
-            const [conn, setConn] = useState(null);
+            const [myId, setMyId] = useState(() => localStorage.getItem('hub_permanent_id') || '');
+            const [targetId, setTargetId] = useState(SALA_PADRAO);
+            const [role, setRole] = useState('OFFLINE');
+            const [code, setCode] = useState("<h1>HUB HTML</h1><p>Conecta-te a uma sala para começar!</p>");
+            const [posts, setPosts] = useState([]);
+            const [fullScreen, setFullScreen] = useState(null);
             const peerRef = useRef(null);
+            const connRef = useRef(null);
 
             useEffect(() => {
-                const peer = new Peer();
+                // Se não tem ID permanente, gera um e guarda
+                const peer = myId ? new Peer(myId) : new Peer();
                 peerRef.current = peer;
-                peer.on('open', id => setMyId(id));
-                peer.on('connection', (c) => {
-                    setConn(c);
-                    setMode('SALA PÚBLICA');
-                    setRole('ESPECTADOR');
-                    c.on('data', data => { if(data.type === 'SYNC') setCode(data.value); });
+
+                peer.on('open', (id) => {
+                    if (!myId) {
+                        localStorage.setItem('hub_permanent_id', id);
+                        setMyId(id);
+                    }
+                    setRole('ID ATIVO');
                 });
+
+                peer.on('connection', (conn) => {
+                    connRef.current = conn;
+                    setRole('HOST / WASH');
+                    conn.on('data', data => handleData(data));
+                });
+
                 return () => peer.destroy();
             }, []);
 
-            const connectP2P = () => {
-                if(!targetId) return;
-                const c = peerRef.current.connect(targetId);
-                setConn(c);
-                setMode(targetId === PUBLIC_ROOM_ID ? 'SALA PÚBLICA' : 'PRIVADO');
-                setRole('WASH');
-                c.on('data', data => { if(data.type === 'SYNC') setCode(data.value); });
+            const entrarNaSala = () => {
+                setRole('CONECTANDO...');
+                const conn = peerRef.current.connect(targetId);
+                connRef.current = conn;
+                
+                conn.on('open', () => {
+                    setRole('CONECTADO À SALA');
+                });
+
+                conn.on('data', data => handleData(data));
             };
 
-            const updateCode = (val) => {
+            const handleData = (data) => {
+                if(data.type === 'SYNC') setCode(data.value);
+                if(data.type === 'POST') setPosts(prev => [data.value, ...prev]);
+            };
+
+            const syncCode = (val) => {
                 setCode(val);
-                if(conn && conn.open) {
-                    conn.send({ type: 'SYNC', value: val });
+                if(connRef.current && connRef.current.open) {
+                    connRef.current.send({ type: 'SYNC', value: val });
                 }
             };
 
+            const publicar = () => {
+                const titulo = prompt("Título do seu site:");
+                if(!titulo) return;
+                const p = { id: Date.now(), titulo, code, autor: myId.substring(0,5) };
+                setPosts(prev => [p, ...prev]);
+                if(connRef.current) connRef.current.send({ type: 'POST', value: p });
+            };
+
             return (
-                <div className="h-screen flex flex-col p-4 gap-4">
-                    {/* HUB CONTROLLER */}
-                    <header className="glass p-5 rounded-[2.5rem] flex flex-col lg:flex-row justify-between items-center gap-6 neon-glow">
-                        <div className="flex items-center gap-4">
-                            <div className="w-12 h-12 bg-sky-500 rounded-2xl flex items-center justify-center text-slate-950 shadow-[0_0_15px_rgba(56,189,248,0.5)]">
-                                <i data-lucide="zap" fill="currentColor"></i>
-                            </div>
-                            <div>
-                                <h1 className="font-black italic text-2xl tracking-tighter">HUB HTML</h1>
-                                <span className="text-[10px] font-bold text-sky-400 uppercase tracking-widest">{mode}</span>
+                <div className="max-w-7xl mx-auto space-y-6">
+                    {/* TELA CHEIA */}
+                    {fullScreen && (
+                        <div className="fixed inset-0 z-[9999] bg-white">
+                            <button onClick={() => setFullScreen(null)} className="absolute top-6 right-6 bg-black text-white px-8 py-3 rounded-full font-black z-[10000]">SAIR DA TELA CHEIA [X]</button>
+                            <iframe srcDoc={fullScreen}></iframe>
+                        </div>
+                    )}
+
+                    {/* --- PAINEL DE IDS (ONDE ESTÁ O QUE PEDISTE) --- */}
+                    <div className="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                        {/* CARD ID PERMANENTE */}
+                        <div className="id-permanente p-8 rounded-[2.5rem] flex flex-col justify-center relative overflow-hidden">
+                            <div className="absolute top-4 right-6 opacity-10"><i data-lucide="fingerprint" size={60}></i></div>
+                            <span className="text-sky-400 text-[10px] font-black uppercase tracking-[0.3em] mb-2">Teu ID Permanente (Pessoal)</span>
+                            <div className="flex items-center gap-4">
+                                <code className="text-2xl font-mono font-black text-white select-all">{myId || "A gerar..."}</code>
                             </div>
                         </div>
 
-                        <div className="flex flex-wrap justify-center items-center gap-4">
-                            <div className="bg-black/40 px-4 py-2 rounded-2xl border border-white/5 text-center">
-                                <p className="text-[8px] text-slate-500 font-bold uppercase">Seu ID Pessoal (Passe para amigos)</p>
-                                <p className="text-[10px] font-mono text-sky-200 select-all">{myId || 'Conectando rede...'}</p>
-                            </div>
-
-                            <div className="flex bg-slate-900 p-1 rounded-2xl border border-white/10">
+                        {/* CARD ENTRAR NA SALA */}
+                        <div className="glass p-8 rounded-[2.5rem] flex flex-col justify-center border-white/20">
+                            <span className="text-slate-500 text-[10px] font-black uppercase tracking-[0.3em] mb-2">Entrar numa Sala / Host</span>
+                            <div className="flex gap-4">
                                 <input 
-                                    value={targetId}
-                                    onChange={(e) => setTargetId(e.target.value)}
-                                    placeholder="ID do Parceiro..." 
-                                    className="bg-transparent px-4 py-2 text-xs outline-none w-48 font-bold text-sky-400"
+                                    value={targetId} 
+                                    onChange={e => setTargetId(e.target.value)}
+                                    className="flex-1 bg-slate-900 border border-slate-700 rounded-2xl px-6 py-4 font-bold text-sky-400 outline-none focus:border-sky-400"
+                                    placeholder="ID da Sala..."
                                 />
-                                <button onClick={connectP2P} className="bg-sky-500 text-slate-950 px-6 py-2 rounded-xl font-black text-xs uppercase hover:brightness-110 active:scale-95 transition-all">
-                                    Conectar
+                                <button onClick={entrarNaSala} className="btn-entrar px-8 py-4 rounded-2xl uppercase text-xs">
+                                    ENTRAR NA SALA
                                 </button>
                             </div>
+                            <p className="mt-2 text-[10px] font-bold text-slate-500 uppercase italic">Estado: <span className="text-sky-400">{role}</span></p>
                         </div>
-                    </header>
+                    </div>
 
-                    {/* STUDIO */}
-                    <main className="flex-1 grid lg:grid-cols-2 gap-4 min-h-0">
-                        <div className="flex flex-col gap-3">
-                            <div className="flex justify-between items-center px-4">
-                                <span className="text-[10px] font-black text-slate-500 uppercase tracking-[0.3em] flex items-center gap-2">
-                                    <i data-lucide="terminal" className="w-3 text-sky-500"></i> {role} MODE
-                                </span>
-                            </div>
+                    {/* EDITOR E PREVIEW */}
+                    <div className="grid lg:grid-cols-2 gap-8">
+                        <div className="flex flex-col gap-4">
                             <textarea 
                                 value={code}
-                                onChange={(e) => updateCode(e.target.value)}
-                                className="flex-1 bg-slate-900/40 p-8 rounded-[3rem] border border-white/5 outline-none font-mono text-[11px] text-sky-300 resize-none shadow-inner focus:border-sky-500/30 transition-all"
-                                placeholder="Insira o código HTML..."
-                            ></textarea>
+                                onChange={e => syncCode(e.target.value)}
+                                className="w-full h-[450px] bg-slate-900/60 p-8 rounded-[3rem] border border-white/5 outline-none font-mono text-xs text-sky-300 shadow-2xl"
+                                placeholder="Digita o teu código aqui..."
+                            />
+                            <button onClick={publicar} className="w-full bg-white text-black py-8 rounded-[2.5rem] font-black text-2xl uppercase tracking-tighter hover:bg-sky-400 transition-all shadow-xl">
+                                🚀 PUBLICAR NO FEED DA SALA
+                            </button>
                         </div>
 
-                        <div className="relative rounded-[3rem] overflow-hidden shadow-2xl border-4 border-slate-900">
-                            <div className="absolute bottom-6 right-8 bg-sky-500 text-slate-950 text-[8px] font-black px-3 py-1 rounded-full z-10 uppercase tracking-widest animate-pulse">
-                                Live Preview
-                            </div>
-                            <iframe id="pv" srcDoc={code}></iframe>
+                        <div className="relative group rounded-[3rem] overflow-hidden border-4 border-slate-900 shadow-2xl">
+                            <button onClick={() => setFullScreen(code)} className="absolute top-6 right-6 bg-sky-500 text-slate-950 p-4 rounded-2xl z-10 opacity-0 group-hover:opacity-100 transition-all shadow-xl">
+                                <i data-lucide="maximize"></i>
+                            </button>
+                            <iframe srcDoc={code}></iframe>
                         </div>
-                    </main>
+                    </div>
 
-                    <footer className="px-8 py-1 flex justify-between text-[9px] font-bold text-slate-700 uppercase tracking-widest">
-                        <span>P2P Engine: PeerJS</span>
-                        <span className={conn ? 'text-green-500' : ''}>{conn ? 'Conectado com Sucesso' : 'Offline'}</span>
-                    </footer>
+                    {/* FEED */}
+                    <section className="py-10">
+                        <div className="flex items-center gap-4 mb-8">
+                            <h2 className="text-xs font-black text-slate-500 uppercase tracking-[0.5em]">Feed de Postagens</h2>
+                            <div className="h-[1px] flex-1 bg-white/10"></div>
+                        </div>
+                        <div className="grid grid-cols-1 md:grid-cols-3 gap-8">
+                            {posts.length === 0 && <div className="col-span-full text-center py-20 glass rounded-[3rem] opacity-20 font-black uppercase text-xs tracking-widest">Nenhuma postagem nesta sala...</div>}
+                            {posts.map(p => (
+                                <div key={p.id} className="glass p-6 rounded-[2.5rem] border border-white/5 hover:border-sky-500/30 transition-all">
+                                    <div className="flex justify-between items-center mb-4 text-[9px] font-bold text-slate-500 uppercase">
+                                        <span>Dev: ID_{p.autor}</span>
+                                        <div className="flex gap-2">
+                                            <button onClick={() => setCode(p.code)} className="p-2 bg-sky-500/10 text-sky-400 rounded-lg"><i data-lucide="code" className="w-4"></i></button>
+                                            <button onClick={() => setFullScreen(p.code)} className="p-2 bg-sky-500/10 text-sky-400 rounded-lg"><i data-lucide="maximize" className="w-4"></i></button>
+                                        </div>
+                                    </div>
+                                    <h3 className="font-black text-lg mb-4 truncate uppercase tracking-tight">{p.titulo}</h3>
+                                    <div className="h-40 rounded-2xl overflow-hidden bg-white/5 pointer-events-none">
+                                        <iframe srcDoc={p.code} className="scale-50 origin-top-left w-[200%] h-[200%]"></iframe>
+                                    </div>
+                                </div>
+                            ))}
+                        </div>
+                    </section>
                 </div>
             );
         };
