--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-PT">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HUB HTML - GLOBAL CONNECT</title>
+    <title>HUB HTML - MULTIPLAYER & FEED</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
@@ -11,13 +11,13 @@
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
-        body { background: #020617; color: white; font-family: 'Inter', sans-serif; }
+        body { background: #020617; color: white; font-family: sans-serif; overflow-x: hidden; }
         .glass { background: rgba(15, 23, 42, 0.9); backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.1); }
-        .neon-border { border: 2px solid #38bdf8; box-shadow: 0 0 20px rgba(56, 189, 248, 0.2); }
-        .id-permanente { background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%); border: 2px solid #38bdf8; }
-        .btn-entrar { background: #38bdf8; color: #020617; font-weight: 900; transition: all 0.2s; }
-        .btn-entrar:hover { background: #7dd3fc; transform: scale(1.05); }
-        iframe { background: white; width: 100%; height: 100%; border: none; border-radius: 2rem; min-height: 450px; }
+        .btn-host { background: #ffffff; color: #020617; font-weight: 900; }
+        .btn-connect { background: #38bdf8; color: #020617; font-weight: 900; }
+        .btn-publish { background: linear-gradient(135deg, #38bdf8 0%, #2563eb 100%); transition: transform 0.2s; }
+        .btn-publish:active { transform: scale(0.95); }
+        iframe { background: white; width: 100%; height: 100%; border: none; border-radius: 2.5rem; min-height: 450px; }
     </style>
 </head>
 <body class="p-4 md:p-8">
@@ -26,153 +26,144 @@
     <script type="text/babel">
         const { useState, useEffect, useRef } = React;
 
-        const SALA_PADRAO = "SALA_PUBLICA_2025";
+        const ID_SALA_PUBLICA = "SALA_PUBLICA_2025";
 
         const App = () => {
-            const [myId, setMyId] = useState(() => localStorage.getItem('hub_permanent_id') || '');
-            const [targetId, setTargetId] = useState(SALA_PADRAO);
-            const [role, setRole] = useState('OFFLINE');
-            const [code, setCode] = useState("<h1>HUB HTML</h1><p>Conecta-te a uma sala para começar!</p>");
+            const [myId, setMyId] = useState(() => localStorage.getItem('hub_id_perm') || '');
+            const [targetId, setTargetId] = useState(ID_SALA_PUBLICA);
+            const [role, setRole] = useState("OFFLINE");
+            const [code, setCode] = useState("<h1>HUB HTML</h1><p>Pronto para publicar!</p>");
             const [posts, setPosts] = useState([]);
-            const [fullScreen, setFullScreen] = useState(null);
+            
             const peerRef = useRef(null);
-            const connRef = useRef(null);
+            const conns = useRef([]);
 
             useEffect(() => {
-                // Se não tem ID permanente, gera um e guarda
-                const peer = myId ? new Peer(myId) : new Peer();
-                peerRef.current = peer;
-
-                peer.on('open', (id) => {
-                    if (!myId) {
-                        localStorage.setItem('hub_permanent_id', id);
-                        setMyId(id);
-                    }
-                    setRole('ID ATIVO');
+                const p = myId ? new Peer(myId) : new Peer();
+                peerRef.current = p;
+                p.on('open', id => {
+                    if(!myId) { localStorage.setItem('hub_id_perm', id); setMyId(id); }
                 });
-
-                peer.on('connection', (conn) => {
-                    connRef.current = conn;
-                    setRole('HOST / WASH');
-                    conn.on('data', data => handleData(data));
-                });
-
-                return () => peer.destroy();
+                return () => p.destroy();
             }, []);
 
-            const entrarNaSala = () => {
-                setRole('CONECTANDO...');
-                const conn = peerRef.current.connect(targetId);
-                connRef.current = conn;
-                
-                conn.on('open', () => {
-                    setRole('CONECTADO À SALA');
+            const setupDataListener = (c) => {
+                c.on('data', data => {
+                    if(data.type === 'SYNC') setCode(data.value);
+                    if(data.type === 'POST') setPosts(prev => [data.value, ...prev]);
+                });
+            };
+
+            const virarHost = () => {
+                if(peerRef.current) peerRef.current.destroy();
+                const hostPeer = new Peer(targetId);
+                peerRef.current = hostPeer;
+
+                hostPeer.on('open', () => {
+                    setRole("VOCÊ É O HOST");
+                    hostPeer.on('connection', (c) => {
+                        conns.current.push(c);
+                        setupDataListener(c);
+                        c.on('open', () => c.send({type: 'SYNC', value: code}));
+                    });
                 });
 
-                conn.on('data', data => handleData(data));
+                hostPeer.on('error', () => {
+                    alert("Sala ocupada! Use 'Entrar na Sala'.");
+                    window.location.reload();
+                });
             };
 
-            const handleData = (data) => {
-                if(data.type === 'SYNC') setCode(data.value);
-                if(data.type === 'POST') setPosts(prev => [data.value, ...prev]);
+            const entrarSala = () => {
+                const c = peerRef.current.connect(targetId);
+                conns.current.push(c);
+                c.on('open', () => {
+                    setRole("CONECTADO AO HOST");
+                    setupDataListener(c);
+                });
             };
 
-            const syncCode = (val) => {
+            const handleCode = (val) => {
                 setCode(val);
-                if(connRef.current && connRef.current.open) {
-                    connRef.current.send({ type: 'SYNC', value: val });
-                }
+                conns.current.forEach(c => {
+                    if(c.open) c.send({type: 'SYNC', value: val});
+                });
             };
 
-            const publicar = () => {
-                const titulo = prompt("Título do seu site:");
+            const publicarProjeto = () => {
+                const titulo = prompt("Título do Projeto:");
                 if(!titulo) return;
-                const p = { id: Date.now(), titulo, code, autor: myId.substring(0,5) };
-                setPosts(prev => [p, ...prev]);
-                if(connRef.current) connRef.current.send({ type: 'POST', value: p });
+
+                const novoPost = {
+                    id: Date.now(),
+                    titulo: titulo,
+                    autor: myId.substring(0, 5),
+                    preview: code
+                };
+
+                // Adiciona localmente
+                setPosts(prev => [novoPost, ...prev]);
+
+                // Envia para todos na rede
+                conns.current.forEach(c => {
+                    if(c.open) c.send({type: 'POST', value: novoPost});
+                });
             };
 
             return (
                 <div className="max-w-7xl mx-auto space-y-6">
-                    {/* TELA CHEIA */}
-                    {fullScreen && (
-                        <div className="fixed inset-0 z-[9999] bg-white">
-                            <button onClick={() => setFullScreen(null)} className="absolute top-6 right-6 bg-black text-white px-8 py-3 rounded-full font-black z-[10000]">SAIR DA TELA CHEIA [X]</button>
-                            <iframe srcDoc={fullScreen}></iframe>
-                        </div>
-                    )}
-
-                    {/* --- PAINEL DE IDS (ONDE ESTÁ O QUE PEDISTE) --- */}
-                    <div className="grid grid-cols-1 lg:grid-cols-2 gap-6">
-                        {/* CARD ID PERMANENTE */}
-                        <div className="id-permanente p-8 rounded-[2.5rem] flex flex-col justify-center relative overflow-hidden">
-                            <div className="absolute top-4 right-6 opacity-10"><i data-lucide="fingerprint" size={60}></i></div>
-                            <span className="text-sky-400 text-[10px] font-black uppercase tracking-[0.3em] mb-2">Teu ID Permanente (Pessoal)</span>
-                            <div className="flex items-center gap-4">
-                                <code className="text-2xl font-mono font-black text-white select-all">{myId || "A gerar..."}</code>
-                            </div>
+                    {/* CONTROLES SUPERIORES */}
+                    <div className="grid grid-cols-1 lg:grid-cols-3 gap-4">
+                        <div className="glass p-6 rounded-[2rem]">
+                            <span className="text-[10px] font-black text-slate-500 uppercase tracking-widest">ID Permanente</span>
+                            <div className="text-sky-400 font-mono font-bold truncate">{myId || "Gerando..."}</div>
                         </div>
 
-                        {/* CARD ENTRAR NA SALA */}
-                        <div className="glass p-8 rounded-[2.5rem] flex flex-col justify-center border-white/20">
-                            <span className="text-slate-500 text-[10px] font-black uppercase tracking-[0.3em] mb-2">Entrar numa Sala / Host</span>
-                            <div className="flex gap-4">
-                                <input 
-                                    value={targetId} 
-                                    onChange={e => setTargetId(e.target.value)}
-                                    className="flex-1 bg-slate-900 border border-slate-700 rounded-2xl px-6 py-4 font-bold text-sky-400 outline-none focus:border-sky-400"
-                                    placeholder="ID da Sala..."
-                                />
-                                <button onClick={entrarNaSala} className="btn-entrar px-8 py-4 rounded-2xl uppercase text-xs">
-                                    ENTRAR NA SALA
-                                </button>
+                        <div className="lg:col-span-2 glass p-6 rounded-[2rem] border-sky-500/20 border flex flex-col md:flex-row gap-4 items-center">
+                            <input value={targetId} onChange={e => setTargetId(e.target.value)} className="flex-1 bg-transparent border-b border-white/10 outline-none font-bold text-white text-sm" placeholder="ID da Sala..."/>
+                            <div className="flex gap-2 w-full md:w-auto">
+                                <button onClick={virarHost} className="btn-host px-6 py-3 rounded-xl font-black text-[10px] uppercase">Virar Host</button>
+                                <button onClick={entrarSala} className="btn-connect px-6 py-3 rounded-xl font-black text-[10px] uppercase">Entrar na Sala</button>
                             </div>
-                            <p className="mt-2 text-[10px] font-bold text-slate-500 uppercase italic">Estado: <span className="text-sky-400">{role}</span></p>
                         </div>
                     </div>
 
+                    <div className="flex items-center gap-2 px-2 text-[10px] font-bold uppercase opacity-50">
+                        <div className={`w-2 h-2 rounded-full ${role !== 'OFFLINE' ? 'bg-green-500 animate-pulse' : 'bg-red-500'}`}></div>
+                        Status: {role}
+                    </div>
+
                     {/* EDITOR E PREVIEW */}
-                    <div className="grid lg:grid-cols-2 gap-8">
-                        <div className="flex flex-col gap-4">
+                    <div className="grid lg:grid-cols-2 gap-8 items-start">
+                        <div className="space-y-4">
                             <textarea 
-                                value={code}
-                                onChange={e => syncCode(e.target.value)}
-                                className="w-full h-[450px] bg-slate-900/60 p-8 rounded-[3rem] border border-white/5 outline-none font-mono text-xs text-sky-300 shadow-2xl"
-                                placeholder="Digita o teu código aqui..."
+                                value={code} 
+                                onChange={e => handleCode(e.target.value)}
+                                className="w-full h-[450px] bg-slate-900/60 p-8 rounded-[3rem] border border-white/5 outline-none font-mono text-xs text-sky-300 shadow-inner"
+                                placeholder="Desenvolva seu HTML aqui..."
                             />
-                            <button onClick={publicar} className="w-full bg-white text-black py-8 rounded-[2.5rem] font-black text-2xl uppercase tracking-tighter hover:bg-sky-400 transition-all shadow-xl">
-                                🚀 PUBLICAR NO FEED DA SALA
+                            <button onClick={publicarProjeto} className="w-full btn-publish py-6 rounded-[2rem] text-white font-black text-xl uppercase tracking-tighter shadow-2xl">
+                                🚀 PUBLICAR NO FEED
                             </button>
                         </div>
-
-                        <div className="relative group rounded-[3rem] overflow-hidden border-4 border-slate-900 shadow-2xl">
-                            <button onClick={() => setFullScreen(code)} className="absolute top-6 right-6 bg-sky-500 text-slate-950 p-4 rounded-2xl z-10 opacity-0 group-hover:opacity-100 transition-all shadow-xl">
-                                <i data-lucide="maximize"></i>
-                            </button>
+                        <div className="rounded-[3rem] overflow-hidden border-4 border-slate-900 shadow-2xl bg-white h-full min-h-[500px]">
                             <iframe srcDoc={code}></iframe>
                         </div>
                     </div>
 
-                    {/* FEED */}
-                    <section className="py-10">
-                        <div className="flex items-center gap-4 mb-8">
-                            <h2 className="text-xs font-black text-slate-500 uppercase tracking-[0.5em]">Feed de Postagens</h2>
-                            <div className="h-[1px] flex-1 bg-white/10"></div>
-                        </div>
-                        <div className="grid grid-cols-1 md:grid-cols-3 gap-8">
-                            {posts.length === 0 && <div className="col-span-full text-center py-20 glass rounded-[3rem] opacity-20 font-black uppercase text-xs tracking-widest">Nenhuma postagem nesta sala...</div>}
+                    {/* GALERIA DE POSTAGENS */}
+                    <section className="pt-12 pb-20">
+                        <h2 className="text-center text-slate-500 font-black uppercase tracking-[0.4em] mb-10 text-xs">Projetos Publicados</h2>
+                        <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                             {posts.map(p => (
                                 <div key={p.id} className="glass p-6 rounded-[2.5rem] border border-white/5 hover:border-sky-500/30 transition-all">
-                                    <div className="flex justify-between items-center mb-4 text-[9px] font-bold text-slate-500 uppercase">
-                                        <span>Dev: ID_{p.autor}</span>
-                                        <div className="flex gap-2">
-                                            <button onClick={() => setCode(p.code)} className="p-2 bg-sky-500/10 text-sky-400 rounded-lg"><i data-lucide="code" className="w-4"></i></button>
-                                            <button onClick={() => setFullScreen(p.code)} className="p-2 bg-sky-500/10 text-sky-400 rounded-lg"><i data-lucide="maximize" className="w-4"></i></button>
-                                        </div>
+                                    <div className="flex justify-between items-center mb-4">
+                                        <span className="text-[9px] font-bold text-slate-500 uppercase">Dev: ID_{p.autor}</span>
+                                        <button onClick={() => setCode(p.preview)} className="text-[10px] font-black text-sky-400 uppercase bg-sky-500/10 px-3 py-1 rounded-full">Clonar</button>
                                     </div>
                                     <h3 className="font-black text-lg mb-4 truncate uppercase tracking-tight">{p.titulo}</h3>
-                                    <div className="h-40 rounded-2xl overflow-hidden bg-white/5 pointer-events-none">
-                                        <iframe srcDoc={p.code} className="scale-50 origin-top-left w-[200%] h-[200%]"></iframe>
+                                    <div className="h-40 rounded-2xl overflow-hidden bg-white/5 pointer-events-none border border-white/5">
+                                        <iframe srcDoc={p.preview} className="scale-50 origin-top-left w-[200%] h-[200%]"></iframe>
                                     </div>
                                 </div>
                             ))}
